--- a/YAML-Formatter.cabal
+++ b/YAML-Formatter.cabal
@@ -61,7 +61,11 @@ executable YAML-Formatter
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+    - YAMLTokenizer.hs
+    - YAMLParser.hs
+    - LineClass.hs
+    - TokenEnum.hs
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
